# uni

./: .clang-format  .env  .env.example  .gitignore  ATTRIBUTION.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  RELEASING.md  conanfile.py  conanfile.txt  docker-compose.yml  setup.ps1  setup.sh
.github/workflows/: deploy.yml  lint.yml
contract/: asyncapi.yaml
deploy/: README.md  bootstrap.sh  docker-compose.oci.yml  traefik.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: about.html  changelog.html  credits.html  faq.html  how-to-play.html  robots.txt  seo.css  sitemap.xml
frontend/public/.well-known/: atproto-did
frontend/public/assets/: banner.ase  bgs.ase  cards.ase  itch_banner.ase  new_game_ui.ase  social_banner.ase  social_icon.ase
frontend/scripts/: generate-schemas.js
frontend/src/: App.svelte  app.css  docs.ts
frontend/src/lib/__fixtures__/: index.ts
frontend/src/lib/audio/: audioLogic.ts  multiChannelSync.ts  musicPlayer.ts  sfxPlayer.ts
frontend/src/lib/components/: MainScreen.svelte
frontend/src/lib/data/: audioCatalogs.ts  chatMock.ts  lobbyCatalogs.ts  profanityWords.ts
frontend/src/lib/stores/: analytics.svelte.ts  audio.svelte.ts  auth.svelte.ts  catalog.svelte.ts  chat.svelte.ts  errors.ts  (+5 more)
include/: WebServer.hpp  action_router.hpp  database.hpp  error.hpp  http_router.hpp  logger.hpp  webserver.hpp  websocket_context.hpp
include/common/: base64.hpp  bot_names.hpp  crypto.hpp  env.hpp  http.hpp  http_utils.hpp  lobby.hpp  login_throttle.hpp  ws.hpp
include/common/match/: effect.hpp  matchrule.hpp
include/controllers/: auth_controller.hpp  chat_controller.hpp  friend_controller.hpp  ilobby_store.hpp  lobby_controller.hpp  match_controller.hpp  stats_controller.hpp
include/game/: game_state.hpp  match_instance.hpp  rule_registry.hpp
include/match/: effect_registry.hpp  match_instance.hpp  match_state.hpp
include/match/effects/: standard.hpp
include/services/: auth_service.hpp  chat_service.hpp  friend_service.hpp  stats_service.hpp
include/transport/: ipresence_store.hpp  presence_registry.hpp  uws_timer_service.hpp
scripts/: generate_contract_hpp.py  generate_ws_hpp.py  lint_cpp.sh
src/: WebServer.cpp  action_router.cpp  database.cpp  http_router.cpp  main.cpp  webserver.cpp
src/common/: http_utils.cpp  lobby.cpp
src/controllers/: auth_controller.cpp  chat_controller.cpp  friend_controller.cpp  lobby_controller.cpp  match_controller.cpp  stats_controller.cpp
src/game/: game_controller.cpp  match_instance.cpp
src/game/effects/: standard.cpp
src/game/rules/: 70.cpp
src/match/: match_instance.cpp
src/match/effects/: decide_swap_target.cpp  pass_hands.cpp  standard.cpp
src/match/rules/: 70.cpp  draw_stacking.cpp  force_play.cpp  jump_in.cpp  no_bluffing.cpp  progressive.cpp  standard.cpp
src/services/: auth_service.cpp  chat_service.cpp  friend_service.cpp  stats_service.cpp
src/transport/: presence_registry.cpp  uws_timer_service.cpp
tests/e2e/: register.mjs
tests/unit/: action_router_test.cpp  auth_controller_test.cpp  auth_service_test.cpp  chat_controller_test.cpp  chat_service_test.cpp  database_test.cpp  friend_service_test.cpp  lobby_controller_test.cpp  lobby_test.cpp  match_controller_test.cpp  match_instance_test.cpp  serialization_test.cpp  stats_controller_test.cpp  stats_service_test.cpp  test_main.cpp  webserver_test.cpp
tests/unit/support/: fake_presence_store.hpp
(+91 files in other folders)
